--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-06-19  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* js/test.js: Fixed the link to the troubleshooting page.
+
+2009-06-19  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* awapi-test.php: Updated it so that it sends the code for the 
         message to the client, along with the translatable message.  
         Moved the "This feed is valid." message into the "Valid" error
