* templates/troubleshooting.php: Fixing some syntax errors by adding         proper closing ?> tags.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@127610 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-06-19  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* templates/troubleshooting.php: Fixing some syntax errors by adding
+        proper closing ?> tags.
+
+2009-06-19  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* js/test.js: Fixed the link to the troubleshooting page.
 
 2009-06-19  Jonathan Wilde  <speedbreeze@gmail.com>
