* feed-stats.php: Cleaned up the markup a bit. Moved the "Options         saved successfully" message into templates/settings.php. 	* templates/settings.php: Added the "Options saved successfully"         message from feed-stats.php.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@127628 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-06-19  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* feed-stats.php: Cleaned up the markup a bit. Moved the "Options
+        saved successfully" message into templates/settings.php.
+	* templates/settings.php: Added the "Options saved successfully" 
+        message from feed-stats.php.
+
+2009-06-19  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* templates/troubleshooting.php: Fixing some syntax errors by adding
         proper closing ?> tags.
 
