* feed-stats.php: Added the feed-stats-plugin textdomain to all         gettext commands. 	* fs-comm.php: Added the feed-stats-plugin textdomain to all gettext          commands. 	* fs-render.php: Added the feed-stats-plugin textdomain to all         gettext commands. 	* templates/settings.php: Added the feed-stats-plugin textdomain to         all gettext commands. 	* templates/troubleshooting.php: Added the feed-stats-plugin         textdomain to all gettext commands.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@127642 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2009-06-19  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* feed-stats.php: Added the feed-stats-plugin textdomain to all 
+        gettext commands.
+	* fs-comm.php: Added the feed-stats-plugin textdomain to all gettext
+         commands.
+	* fs-render.php: Added the feed-stats-plugin textdomain to all 
+        gettext commands.
+	* templates/settings.php: Added the feed-stats-plugin textdomain to 
+        all gettext commands.
+	* templates/troubleshooting.php: Added the feed-stats-plugin 
+        textdomain to all gettext commands.
+
+2009-06-19  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* build.xml (added): Added an Apache Ant build file to deal with 
         textdomains and .POT files.
 	* build.properties.sample (added): Added a sample properties file 
