* build.xml: Added the makepot target, which generates a POT file         from the plugin.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@127813 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-06-20  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* build.xml: Added the makepot target, which generates a POT file
+        from the plugin.
+
 2009-06-19  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* feed-stats.php: Added the feed-stats-plugin textdomain to all 
