--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2009-06-20  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* feed-stats.php: Moved all of the require_once statements to the 
+        top of the file for sake of simplicity.
+	* templates/troubleshooting.php: Removed require_once statement; now
+        at top of feed-stats.php.
+	* test.php: Removed outdated require_once statement; now at top of 
+        feed-stats.php.
+
+2009-06-20  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* feed-stats.php (added): Renamed from feed-stats-plugin.php.  The 
         rename to feed-stats-plugin.php might have broken the updater.
 	* feed-stats-plugin.php (deleted): Renamed to feed-stats.php.
