* client.php: Removed the $update parameter from         fs_fetch_feedburner_data--it's currently unused.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@128279 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-06-21  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* client.php: Removed the $update parameter from 
+        fs_fetch_feedburner_data--it's currently unused.
+
+2009-06-21  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* client.php: Moved SUPPORT_URL and fs_translatable_error into 
         lang.php. Added the $fetcher parameter to fetch_remote_xml and 
         fs_fetch_feedburner_data to allow us to test the function with a 
