--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-06-21  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* client.php: Slimmed down the fs_load_feed_data and 
+        fs_load_item_data functions--they included much unnecessary 
+        code.
+
+2009-06-21  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* client.php: Removed the $update parameter from 
         fs_fetch_feedburner_data--it's currently unused.
 
