* feed-stats.php: Increased the version number from 1.0.5 to 1.0.6.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@128356 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-06-21  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* feed-stats.php: Increased the version number from 1.0.5 to 1.0.6.
+
+2009-06-21  Jonathan Wilde  <speedbreeze@gmail.com>
+
     * tests/client.php: Added two test cases for the client.php script.
 	* client.php: Slimmed down the fs_load_feed_data and 
         fs_load_item_data functions--they included much unnecessary 
