* client.php: Made filesystem caching of data from FeedBurner work         properly.  There's a 12-hour time-to-live set on cached values.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@130901 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-06-30  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* client.php: Made filesystem caching of data from FeedBurner work
+        properly.  There's a 12-hour time-to-live set on cached values.
+
 2009-06-21  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* feed-stats.php: Increased the version number from 1.0.5 to 1.0.6.
