--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-06-30  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* style.css.php: Set the `Expires` header on the stylesheet to 
+        improve performance.  The file is set to expire in two years.
+
+2009-06-30  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* client.php: Made filesystem caching of data from FeedBurner work
         properly.  There's a 12-hour time-to-live set on cached values.
 
