* feed-stats.php: Made the "Total Hits & Subscribers" text         translatable. Made sure to use the appropriate textdomain.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@132918 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-07-07  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* feed-stats.php: Made the "Total Hits & Subscribers" text 
+        translatable. Made sure to use the appropriate textdomain.
+
 2009-06-30  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* build.xml: Converted tabs to spaces.
