* style.css.php: Fixed a PHP syntax error in the Expires header         code.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@132920 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-07-07  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* style.css.php: Fixed a PHP syntax error in the Expires header 
+        code.
+
+2009-07-07  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* feed-stats.php: Made the "Total Hits & Subscribers" text 
         translatable. Made sure to use the appropriate textdomain.
 
