--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-09  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* render.php: Cleaned up the stats viewer.
+
 2009-07-07  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* style.css.php: Added a missing colon in the Expires header.
