--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-07-14  Jonathan Wilde  <speedbreeze@gmail.com> 
+	
+	* build.xml: Added the preptag target, which automatically tags the
+        current code in trunk (excluding the tests directory and 
+        build.xml) based on the release property in build.properties.
+        Tweaked the cleanup target.  Added the changelog target to 
+        generate changelog entries.
+    * changelog.xsl: Added the XSLT stylesheet used to format the 
+        Changelog entry with.
+
 2009-07-09  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* render.php: Cleaned up the stats viewer.
@@ -645,4 +655,5 @@
 	* feed-stats.php: Edited the description line so that the link to 
 		the configure page is a relative path rather than one that goes 
 		to my site.
+
 
