--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+2009-07-18 Jonathan  <youremail@mail.com>  
+	
+	* .: 
+	* translations: 
+	* translations\TRANSLATIONS.txt: 
+	* translations\feed-stats-plugin-de_DE.mo: 
+	* translations\feed-stats-plugin-de_DE.po: 
+	* COPYING.txt: 
+	* ChangeLog: 
+	* tests\simpletest: 
+	* COPYING: 
+ 
+2009-07-14  Jonathan Wilde  <speedbreeze@gmail.com>  
+	
+    patch by: Bjoern Buerstinghaus
+    
+	* translations\feed-stats-plugin-de_DE.mo: Added the mo file that 
+        was compiled from translations\feed-stats-plugin-de_DE.po.
+	* translations\feed-stats-plugin-de_DE.po: Added the po file created
+        by Bjoern Buerstinghaus for this plugin.
+	* translations\TRANSLATIONS.txt: Added a file to make the ownership and
+		licensing of the translations files.
+ 
 2009-07-14  Jonathan Wilde  <speedbreeze@gmail.com> 
 	
 	* build.xml: Added the preptag target, which automatically tags the
@@ -655,5 +678,7 @@
 	* feed-stats.php: Edited the description line so that the link to 
 		the configure page is a relative path rather than one that goes 
 		to my site.
+
+
 
 
