--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,7 @@
-2009-07-18 Jonathan  <youremail@mail.com>  
+2009-07-18  Jonathan Wilde <speedbreeze@gmail.com>  
 	
-	* .: 
-	* translations: 
-	* translations\TRANSLATIONS.txt: 
-	* translations\feed-stats-plugin-de_DE.mo: 
-	* translations\feed-stats-plugin-de_DE.po: 
-	* COPYING.txt: 
-	* ChangeLog: 
-	* tests\simpletest: 
-	* COPYING: 
+	* COPYING.txt: Originally named COPYING.
+	* COPYING: Renamed to COPYING.txt, which is friendlier to Windows users.
  
 2009-07-14  Jonathan Wilde  <speedbreeze@gmail.com>  
 	
