--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2009-07-29  Jonathan  <youremail@mail.com>  
+	
+	* build.xml: Updated the "preptag" target so that the copying.txt  
+		and changelog.txt files are properly copied to the tag.
+ 
 2009-07-29  Jonathan Wilde  <speedbreeze@gmail.com>  
 	
 	* changelog.xsl: Tweaked the spacing of items in the stylesheet so
@@ -684,6 +689,7 @@
 	* feed-stats.php: Edited the description line so that the link to 
 		the configure page is a relative path rather than one that goes 
 		to my site.
+
 
 
 
