--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 2009-07-30  Jonathan Wilde  <speedbreeze@gmail.com>  
 	
+	* feed-stats.php: Modified the `get_plugin_folder` function so that
+		it is faster and runs properly on Windows-based servers.
+ 
+2009-07-30  Jonathan Wilde  <speedbreeze@gmail.com>  
+	
 	* readme.txt: Updated the title of the plugin, since the plugin's 
 		name is being changed from "FeedBurner Feed Stats" to "Feed 
 		Stats for WordPress".  Updated the summary and disclaimers.  
@@ -697,6 +702,7 @@
 	* feed-stats.php: Edited the description line so that the link to 
 		the configure page is a relative path rather than one that goes 
 		to my site.
+
 
 
 
