--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2009-07-30  Jonathan  <youremail@mail.com>  
+	
+	* feed-stats.php: 
+	* tests\simpletest: 
+ 
 2009-07-30  Jonathan Wilde  <speedbreeze@gmail.com>  
 	
 	* render.php: Formatted the dates in the tables according to the 
@@ -708,6 +713,7 @@
 	* feed-stats.php: Edited the description line so that the link to 
 		the configure page is a relative path rather than one that goes 
 		to my site.
+
 
 
 
