--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 2009-07-30  Jonathan Wilde  <speedbreeze@gmail.com>  
 	
+	* readme.txt: Changed the "Tested Up To" field of the plugin to 
+		2.8.2, which is the latest version of WordPress.
+ 
+2009-07-30  Jonathan Wilde  <speedbreeze@gmail.com>  
+	
 	* readme.txt: Added information to the Changelog section of the 
 		readme file.
  
@@ -718,6 +723,7 @@
 	* feed-stats.php: Edited the description line so that the link to 
 		the configure page is a relative path rather than one that goes 
 		to my site.
+
 
 
 
