* feed-stats.php: Added a placeholder `admin_url` function to make 		sure that WordPress 2.3.x and WordPress 2.5.x work without 		errors.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@141094 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,11 @@
 2009-07-30  Jonathan Wilde  <speedbreeze@gmail.com>  
 	
+	* feed-stats.php: Added a placeholder `admin_url` function to make 
+		sure that WordPress 2.3.x and WordPress 2.5.x work without 
+		errors.
+ 
+2009-07-30  Jonathan Wilde  <speedbreeze@gmail.com>  
+	
 	* parser.php: Updated the GPL statement.
 	* feed-stats.php: Updated the GPL statement.
 	* templates\test.php: Updated the GPL statement.
@@ -741,6 +747,7 @@
 	* feed-stats.php: Edited the description line so that the link to 
 		the configure page is a relative path rather than one that goes 
 		to my site.
+
 
 
 
