--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,11 @@
 2009-07-30  Jonathan Wilde  <speedbreeze@gmail.com>  
 	
+	* client.php: Tweaked the `fs_load_feedburner_data` function so that
+		it properly returns the "Configuration needed" error to the 
+		user.
+ 
+2009-07-30  Jonathan Wilde  <speedbreeze@gmail.com>  
+	
 	* feed-stats.php: Added a placeholder `admin_url` function to make 
 		sure that WordPress 2.3.x and WordPress 2.5.x work without 
 		errors.
@@ -747,6 +753,7 @@
 	* feed-stats.php: Edited the description line so that the link to 
 		the configure page is a relative path rather than one that goes 
 		to my site.
+
 
 
 
