--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+2009-08-15  Jonathan Wilde  <speedbreeze@gmail.com>  
+	
+	* feed-stats.php: Made the logging information from the 
+		`fs_fetch_feedburner_data` function be outputted on the
+		"Unknown Error" screen.
+	* client.php: Added the logging information to the result array 
+		for the `fs_fetch_feedburner_data` function.
+
 2009-07-30  Jonathan Wilde  <speedbreeze@gmail.com>  
 	
 	* feed-stats.php: Tweaked the JavaScript that is run at page load
@@ -784,27 +792,3 @@
 	* feed-stats.php: Edited the description line so that the link to 
 		the configure page is a relative path rather than one that goes 
 		to my site.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<<<<<<< .mine
-
-=======
-
-
->>>>>>> .r141100
-
-
-
-
